fixed des/dev heading spacing

--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ a {
 }
 
 .proj-container h2 {
-    padding-bottom: 2rem;
+    padding: 3rem 0 2rem 0;
 }
 
 
